# 3dConverter

./: .vscode.code-workspace  171210analysis_brep.ifc  3dConverter.cpp  3dConverter.h  AC14-FZK-Haus.gltf  AC14-FZK-Haus.gltf2  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Convert2AssImp.cpp  Convert2AssImp.h  IfcAssImpImporter.cpp  IfcAssImpImporter.h  Makefile  a.sh  assimpConverter.cpp  cmake_install.cmake  myIoStream.cpp
